objects/Product2.object
<CustomObject>
    <fields>
        <fullName>OF_BillingElement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing element</label>
        <referenceTo>OF_BillingElement__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_CommercialElement__c</fullName>
        <formula>OF_BillingElement__r.OF_CommercialElement__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commercial element</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_DataFineValidita__c</fullName>
        <formula>OF_BillingElement__r.OF_DataFineValidita__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data fine validità</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_DataInizioValidita__c</fullName>
        <formula>OF_BillingElement__r.OF_DataInizioValidita__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data inizio validità</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_ListinoCustom__c</fullName>
        <label>ListinoCustom</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Servizio__c</fullName>
        <formula>OF_BillingElement__r.OF_CommercialElement__r.OF_Servizio__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Servizio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Anni_Fiber_Link__c</fullName>
        <label>Anni Fiber Link</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Anno</fullName>
                </value>
                <value>
                    <fullName>2 Anni</fullName>
                </value>
                <value>
                    <fullName>3 Anni</fullName>
                </value>
                <value>
                    <fullName>X Anni</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>OF_CommercialElement__c</columns>
        <columns>OF_Servizio__c</columns>
        <columns>OF_DataInizioValidita__c</columns>
        <columns>OF_DataFineValidita__c</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FLINK</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>OF_ListinoCustom__c</columns>
        <columns>OF_CommercialElement__c</columns>
        <columns>OF_Servizio__c</columns>
        <columns>OF_DataInizioValidita__c</columns>
        <columns>OF_DataFineValidita__c</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OF_Servizio__c</field>
            <operation>equals</operation>
            <value>Fiber Link</value>
        </filters>
        <label>FLINK</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FLINK_BI</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PO_Anni_Fiber_Link__c</columns>
        <columns>OF_ListinoCustom__c</columns>
        <columns>OF_CommercialElement__c</columns>
        <columns>OF_Servizio__c</columns>
        <columns>OF_DataInizioValidita__c</columns>
        <columns>OF_DataFineValidita__c</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OF_Servizio__c</field>
            <operation>equals</operation>
            <value>Fiber Link</value>
        </filters>
        <filters>
            <field>OF_CommercialElement__c</field>
            <operation>equals</operation>
            <value>SINGOLA VIA BIFIBRA</value>
        </filters>
        <label>FLINK BI</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FLINK_Mono</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PO_Anni_Fiber_Link__c</columns>
        <columns>OF_ListinoCustom__c</columns>
        <columns>OF_CommercialElement__c</columns>
        <columns>OF_Servizio__c</columns>
        <columns>OF_DataInizioValidita__c</columns>
        <columns>OF_DataFineValidita__c</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OF_Servizio__c</field>
            <operation>equals</operation>
            <value>Fiber Link</value>
        </filters>
        <filters>
            <field>OF_CommercialElement__c</field>
            <operation>equals</operation>
            <value>SINGOLA VIA MONOFIBRA</value>
        </filters>
        <label>FLINK MONO</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FLINK_TETRA</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PO_Anni_Fiber_Link__c</columns>
        <columns>OF_ListinoCustom__c</columns>
        <columns>OF_CommercialElement__c</columns>
        <columns>OF_Servizio__c</columns>
        <columns>OF_DataInizioValidita__c</columns>
        <columns>OF_DataFineValidita__c</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OF_Servizio__c</field>
            <operation>equals</operation>
            <value>Fiber Link</value>
        </filters>
        <filters>
            <field>OF_CommercialElement__c</field>
            <operation>equals</operation>
            <value>SINGOLA VIA TETRAFIBRA</value>
        </filters>
        <label>FLINK TETRA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IRU</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>OF_CommercialElement__c</columns>
        <columns>OF_Servizio__c</columns>
        <columns>OF_DataInizioValidita__c</columns>
        <columns>OF_DataFineValidita__c</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OF_Servizio__c</field>
            <operation>equals</operation>
            <value>IRU</value>
        </filters>
        <label>IRU</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>P2P</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>OF_ListinoCustom__c</columns>
        <columns>OF_CommercialElement__c</columns>
        <columns>OF_Servizio__c</columns>
        <columns>OF_DataInizioValidita__c</columns>
        <columns>OF_DataFineValidita__c</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OF_Servizio__c</field>
            <operation>equals</operation>
            <value>P2P Base</value>
        </filters>
        <label>P2P</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>